@@ -1,6 +1,70 @@
-# Multithreaded-Dictionary-Server
+# 🕵️‍♂️ The Ultimate Word Adventure: Your Personal Dictionary App! 📚
+
+### 🚀 Embark on a Word Journey
+
+Welcome to the Ultimate Dictionary App! This Java-based dictionary project is your go-to solution for managing words and definitions with style and efficiency. Whether you're a language enthusiast or just looking for a fun way to explore words, this app has got you covered!
+
+### 🌈 Why You'll Love It
+
+- 🔍 Search Magic: Type in a word and watch as its definition appears like magic. It's like having a word wizard at your fingertips!
+- ✍️ Create Your Word Kingdom: Add new words and definitions to build your personal dictionary empire.
+- 🗑️ Bye-Bye Boring Words: Easily delete words you’ve outgrown or that just don’t fit your style anymore.
+- ✏️ Edit Like a Pro: Update definitions and examples to keep your dictionary fresh and fabulous.
+
+### 📚 When to Use
+- 🤯 Language Learning: Perfect for students or language enthusiasts looking to expand their vocabulary and keep track of new words.
+- 📖 Writing and Editing: Ideal for writers and editors who want to maintain a personal glossary of terms and definitions.
+- 🎓 Educational Settings: Useful in classrooms for teachers and students to create and share personalized word lists and definitions.
+- 🗂️ Personal Knowledge Base: Build your own reference database of words, terms, and their meanings for quick access and review.
+
+### 💡Getting Started
+Make sure you’ve got JDK 21.0.3 installed. Then, follow these steps:
+1. Navigate to the correct directory:
+   ```bash
+   cd /path/to/dictionary
+   ```
+2. Start the server:
+   ```bash
+   java -jar server/DictionaryServer.jar <port>
+   ```
+3. Start the client:
+   ```bash
+   java --module-path client/lib --add-modules javafx.controls,javafx.fxml -jar client/DictionaryClient.jar
+   ```
+
+### 🖼️ See It in Action
+
+**Client Login Menu**
+
+Experience the intuitive client login menu:
 
 <img src="https://github.com/verazi/Multithreaded-Dictionary-Server/blob/master/zreport/ClientLogin.png" alt="Client login menu" width="300"/>
+
+**Multiple Clients**
+
+Open several clients and manage words simultanelously:
+
 <img src="https://github.com/verazi/Multithreaded-Dictionary-Server/blob/master/zreport/ServalClient.png" alt="2 clients" width="800"/>
+
+**Server Activity Report**
+
+Stay informed with real-time server activity reports:
+
 <img src="https://github.com/verazi/Multithreaded-Dictionary-Server/blob/master/zreport/ServerReport.png" alt="Server report" width="300"/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
